--- a/pom.xml
+++ b/pom.xml
@@ -16,12 +16,11 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>   <!-- use java 8 -->
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 
@@ -31,7 +30,7 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>com.qing.pica.MainRun</mainClass>
+							<mainClass>com.qing.ac.analysis.Main</mainClass>
 						</manifest>
 					</archive>
 					<descriptorRefs>
